--- a/admins.html
+++ b/admins.html
@@ -124,6 +124,9 @@
         h1 {
             margin-top: 40px;
         }
+        .table{
+            width:100%;
+        }
     </style>
 
 </head>
@@ -240,7 +243,7 @@
                 </div>
 
 
-                <table id="data-table">
+                <table id="data-table" class="table">
                     <thead>
                         <tr>
                             <th>Full Name</th>
