--- a/ongoing.html
+++ b/ongoing.html
@@ -125,7 +125,7 @@
       </nav>
       <!-- Navbar End -->
       <div class="container">
-        <table id="data-table">
+        <table id="data-table" class="table">
           <h1>Pending Requests</h1>
           <thead>
             <tr>
